funcionando la auditoria pero con una recursion casi controlada